--- a/src/pages/aboutUs/aboutUs.wxml
+++ b/src/pages/aboutUs/aboutUs.wxml
@@ -18,7 +18,7 @@
 	<view class="introduce">
 		<text class="introduce_title">我们能帮你做什么?</text>
 		<text class="introduce_content">
-			网站建设,省钱,整理需求,开发小程序,技术咨询,软件报价.
+			网站建设,省钱,整理需求,开发小程序,技术咨询,软件报价.企业或个人网上宣传,推广,提高逼格......
 		</text>
 	</view>
 
