为何配色那么难

--- a/src/assets/scss/_utils.scss
+++ b/src/assets/scss/_utils.scss
@@ -4,9 +4,8 @@
  *
  * ------------------------------------------------------------------
  *
- * @author  ljr
- * @link    https://devework.com/
- * @data    2017-06-11
+ * @author Fizz
+ * @data    2018年5月30日13:58:32
  */
 @import "support";
 
