--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -4,9 +4,8 @@
  *
  * ------------------------------------------------------------------
  *
- * @author  JeffMa
- * @link    https://devework.com/
- * @data    2017-06-11
+ * @author  Fizz
+ * @data    2018年5月30日13:58:05
  */
 
 // Margin
