--- a/src/pages/contactUs/contactUs.scss
+++ b/src/pages/contactUs/contactUs.scss
@@ -1,2 +1,11 @@
 // 支持文件
 @import "../../assets/scss/support";
+
+.contactUs {
+	.info_img {
+		text-align: center;
+		margin: 0 auto;
+		display: block;
+		width: 230px;
+	}
+}
