--- a/src/pages/business/business.scss
+++ b/src/pages/business/business.scss
@@ -1,2 +1,25 @@
 // 支持文件
 @import "../../assets/scss/support";
+
+.business {
+	padding: 10px;
+	text-indent: 20px;
+	.introduce {
+		margin-top: 30px;
+		text-align: left;
+		.introduce_title {
+			display: block;
+			font-size: 20px;
+			text-align: left;
+			margin-bottom: 8px;
+		}
+		.panel-body {
+			border-bottom: 1px solid $colorLink;
+			border-top: 1px solid $colorLink;
+		}
+		.introduce_content {
+			font-size: 16px;
+			text-align: left;
+		}
+	}
+}
