--- a/src/pages/yourProblem/yourProblem.scss
+++ b/src/pages/yourProblem/yourProblem.scss
@@ -1,11 +1,22 @@
 // 支持文件
 @import "../../assets/scss/support";
 
-.user-img {
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	margin-top: 20px;
-	display: block;
-	overflow: hidden;
+.your_problem {
+	padding: 10px;
+	.user-img {
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		margin-top: 20px;
+		display: block;
+		overflow: hidden;
+	}
+	.section {
+		border: 1px solid $colorLink;
+		input {
+			padding-left: 5px;
+			border-radius: 2px;
+		}
+		margin: 10px;
+	}
 }
