文案修改 UI样式修改

--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -30,10 +30,11 @@ $colorBlack: #000;
 $colorRed: #f00;
 $colorYellow: #F7BA2A;
 
-$color: #f89e07;
-$colorLink: #1D8CE0;
-
-$backGroundColor: #090706;
+// 神秘岛主色调
+$color: #CE790E;  // 字体颜色
+$colorLink: #FFFDD6; // 线条颜色
+$backGroundColor: #0F3A4B; // 背景颜色
+// #0F3A4B #65333F #5D0F05 #CE790E  #FFFDD6
 
 // Font
 $fontSize: 16px;
