--- a/src/pages/myService/myService.wxml
+++ b/src/pages/myService/myService.wxml
@@ -1,9 +1,25 @@
-<view class="app">
-	根据需求文档报价
-	需要提供软件设计UI
-	分期付款 开工前 需先付20%--30%
-	沟通项目计划,人员配置,上线安排
-	定期展示进度
-	交付阶段定金
-	运维,尾款
+<view class="app myService">
+	<text>有人说,能力越大,责任就越大,作为在互联网工作四五年的研发人员,有能力也有责任帮助那些有志于投入互联网浪潮老板</text>
+	<text>工作久了会让人麻木,变成了只会听从老板命令的机器,为满足他的梦想,加班加点.有时候我会想,我的价值真的只能用哪个每月固定的银行转账数字和几句老板的夸赞来衡量的吗?
+		人类学会直立行走是进化过程的一个很重要的标志,他看到了高山的巍峨,看到了大海的辽阔,看到了星空的璀璨,而现在我们要怎么才能挣脱这附加在我们身上的枷锁,抬头挺胸走向远方...
+	</text>
+	<text>
+		有一天我突然觉得我的征途是星辰大海,
+		于是我和几个情投意合的朋友组建了这个工作室,刚开始是为了挣个机械键盘钱,后来我们都是把每个项目当做自己的一个作品,一件艺术品来对待的.不断的优化,优化...
+		把用户体验做到最好,
+	</text>
+	<text>
+		扯得有点远了,我对待业余项目就是这样的情怀.
+	</text>
+	<text>
+		我们的合作方式是这样的,在你还没有出来完整的需求文档前,我们会给你提供专业性的指导意见,我们也有一名高级产品经理,需求分析,风险评估,技术难点,项目配置,系统配置,这些是免费的.
+	</text>
+	<text>
+		在你的完整的需求文档交给我们之后,我们会根据项目的周期,预算,要求,安排项目计划,包括人员配比,阶段开发,分期费用,提测时间,运维.等等
+		一般的兼职项目最多配置是二个前端二个后端,这是经过实践检验的最合理的配比,周期不宜过长,一个月一周期,我们可以部署项目,运维,这部分是要收费的,
+		我们也有自己的服务器,可以自行购买,也可以租用我们的.一般的开工费是总费用的20%--30% 我们每周都会汇报一下工作进度.
+	</text>
+
+	<text>项目完成后,我们会输出完善的技术文档,以保证后续二次开发,解决您的后顾之忧.系统运行一定时间需要将尾款付清.</text>
+	<text>我们会做定期回访,以收集系统运行信息与我们的服务是否得到您的认可,还有那些可以改善的.</text>
 </view>
