--- a/src/pages/yourProblem/yourProblem.wxml
+++ b/src/pages/yourProblem/yourProblem.wxml
@@ -1,19 +1,19 @@
 <view class="app your_problem">
-	<open-data type="userAvatarUrl" style="margin: 0 auto;text-align: center;margin: 10px auto;" class="user-img"></open-data>
+	<open-data type="userAvatarUrl" style="margin: 0 auto;text-align: center;margin: 10px auto;"
+			   class="user-img"></open-data>
 	<open-data type="userNickName" style="text-align: center;" lang="zh_CN"></open-data>
 	<view class="section u-ta-l">
-		<label>
-			<text>姓名</text>
-			<input  maxlength="10" placeholder="请输入您的姓名" />
-		</label>
+		<input maxlength="10" type="text" placeholder="请输入您的姓名"/>
 	</view>
 	<view class="section u-ta-l">
-		<input  maxlength="10" placeholder="请输入您的手机号" />
+		<input maxlength="11" type="number" placeholder="请输入您的手机号"/>
 	</view>
 	<view class="section u-ta-l">
-		<input  maxlength="10" placeholder="请输入您的邮箱" />
+		<input maxlength="20" placeholder="请输入您的邮箱"/>
 	</view>
 	<view class="section u-ta-l">
-		<input  maxlength="10" placeholder="你想说的" />
+		<textarea bindblur="bindTextAreaBlur" auto-height placeholder="你想说的..."/>
 	</view>
+
+	<button class="submitBtn" type="primary" plain="false" size="default" bindtap="clickSubmitData">提交</button>
 </view>
