--- a/src/pages/yourProblem/yourProblem.scss
+++ b/src/pages/yourProblem/yourProblem.scss
@@ -13,10 +13,16 @@
 	}
 	.section {
 		border: 1px solid $colorLink;
-		input {
-			padding-left: 5px;
-			border-radius: 2px;
-		}
+		border-radius: 2px;
 		margin: 10px;
+		input, textarea {
+			padding: 5px;
+			border-radius: 4px;
+		}
+	}
+	.submitBtn {
+		margin: 10px;
+		color: $color;
+		border:1px solid $colorLink;
 	}
 }
