恍恍惚惚 风风火火 上上线线

--- a/src/pages/myService/myService.wxml
+++ b/src/pages/myService/myService.wxml
@@ -10,7 +10,7 @@
 		</text>
 	</view>
 	<view>
-		<text class="duanluo">扯得有点远了，我对待业余项目就是这样的情怀。
+		<text class="duanluo">扯得有点远了，我对待业余项目就是这样的情怀。如果你也是一个有情怀的人,请联系我。
 		</text>
 	</view>
 	<view class="duanluo">
