--- a/src/pages/showExample/showExample.scss
+++ b/src/pages/showExample/showExample.scss
@@ -1,2 +1,13 @@
 // 支持文件
 @import "../../assets/scss/support";
+.showExample{
+	width: 100%;
+	padding: 20px auto;
+	text-align: center;
+	.exampleImg{
+		display: block;
+		margin: 20px auto;
+		text-align: center;
+		height: 100%;
+	}
+}
