创客宝开始

--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -27,14 +27,14 @@ $colorBlue: #20A0FF;
 $colorGreen: #13CE66;
 $colorGray: #475669;
 $colorBlack: #000;
-$colorRed: #f00;
+$colorRed: #C53300;
 $colorYellow: #F7BA2A;
 
-// 神秘岛主色调
-$color: #CE790E;  // 字体颜色
-$colorLink: #FFFDD6; // 线条颜色
-$backGroundColor: #0F3A4B; // 背景颜色
-// #0F3A4B #65333F #5D0F05 #CE790E  #FFFDD6
+// 创客宝颜色搭配
+$color: #2B2B2B;  // 字体颜色
+$colorLink: #F1F1F1; // 线条颜色
+$backGroundColor: #FFFFFF; // 背景颜色
+
 
 // Font
 $fontSize: 16px;
