--- a/src/pages/address/address.scss
+++ b/src/pages/address/address.scss
@@ -1,7 +1,8 @@
 // 支持文件
 @import "../../assets/scss/support";
+@import "../../assets/scss/support";
 
-.business {
+.index {
 	.index_btn {
 		display: block;
 		margin-top: 20px;
