--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -60,7 +60,7 @@
 			image {
 				height: 42px;
 				width: 42px;
-				display: inline-block;
+				display: block;
 				margin: 0 auto;
 			}
 			text {
