--- a/src/pages/new-detail/new-detail.wxml
+++ b/src/pages/new-detail/new-detail.wxml
@@ -1,10 +1,37 @@
-<view class="app index">
-	<view class="app__inner">
-		<text class="app__title">创客宝</text>
+<view class="app news">
+	<view class="news__inner">
+		<text class="news__title">腾讯科技新书预售:"掘金"互联网+时代</text>
 
-		<button wx:for="{{menuArr}}" class="index_btn" data-link="{{item.link}}" plain="false"  size="default" wx:key="{{idx}}" bindtap="clickMenuBtn">
-			{{item.name}}
-		</button>
+		<text class="news__detail">
+			腾讯科技讯 继2014年推出创业实战读本《教训》和商业战略洞察读本《跨界》后，腾讯科技企鹅智酷再出发推出重磅力作——《掘金•互联网+时代的创业指南》。
+
+			企鹅智酷是腾讯科技频道深度研究性栏目，透视TMT产业的水下冰山，洞见科技背后的商业逻辑。目前包括每日图表、智酷分析、智酷智囊，并定期推出重磅行业报告，如《互联网+终极报告：150页PPT解读九大行业“新红利”》、《互联网+汽车：中国汽车消费新趋势报告》、《2015新金矿：首份二三线城市互联网跨界报告》、
+			《解密微信：微信平台首份数据研究报告》等一经推出便在行业内外引发极大关注和转载跟踪。
+
+			移动互联网的颠覆性变化带来新机遇
+
+			移动互联网曾经被视为未来十几年最大的创业机会，过去一两年创业者在寻找崛起的突破口和风口，2015年他们则会感受到前所未有的颠覆性变化。这种变化在于，人们生活的各个领域都正在被移动互联网所渗透，生活习惯、信息获取方式、出行方式、交流方式等都在经历着重大变革。此时此刻，对于潜在创业机会的分析显得尤为重要，唯有看清形势、把握机会的创业者才能占领创业风口，并有机会进入十亿美元俱乐部。《掘金》帮你实现这一切！
+
+			《掘金》原型即为企鹅智酷的百页年度报告《移动时代创业黄金法则》，如果说该份报告是调查的精华所在，那么本书绝对是对报告的有力扩充，让你更加全面地看懂并找到互联网+时代的创业机会，是每一位创业者的必读物！错过这本书，你有可能会错过一个时代！
+
+			《掘金》由企鹅智酷通过长达半年的全行业深入调研完成，它包括七轮累计31万网络用户的详细调查和来自五大领域的几十个典型案例分析，向创业者们展示了社交、O2O、媒体、教育、娱乐这五大领域中真正存在的商业机会与危险、挑战。
+
+			2015年创业掘金机会就在这里
+
+			在本书中你会看到2015年社交、O2O、媒体、教育、娱乐这五大行业留给创业者的机会是：
+
+			社交领域将会成为创业和投资的热度交汇点，挑战在于找到具有真正机会的细分领域；
+
+			上门服务或最后一公里配送的社区O2O战场，将进入速度和质量的综合比拼；餐饮O2O行业出现在更为垂直的餐饮细分领域，并会涌现出更多提供技术解决方案的中间商，进一步催熟产业，掘金机会将出现在商户服务一侧；旅游O2O行业，主打海外目的地旅游、周边游、定制游成为新的创业热点；而租车O2O留给新入局者的创业窗口正在缩小；
+
+			传统媒体、互联网媒体继续向移动端转移，很多具备信息属性的移动服务类APP也将向媒体化方向演进，竞争将是全方位的；
+
+			在线教育将进入洗牌期，更多优质的在线教育产品和资源将按照横向平台化、纵向服务化这两个维度整合；
+
+			手游以低门槛、高热度继续成为创业热度，移动视频、移动音乐则处于创业高门槛、低热度区间，移动阅读将出现更为轻量化和泛娱乐化的产品创业方向。
+
+			或许你准备创业不知作何选择、踌躇不前，或许你已经走在创业的路上并为之奋力拼搏，又或许你纠结于如何通过产品实现盈利和变现……无论你处在哪个阶段，在这本书里都能找到适用自己的那一部分，或许你的创业之路就此发生改变！
+		</text>
 
 	</view>
 </view>
