--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,6 +1,5 @@
 // 支持文件
 @import "../../assets/scss/support";
-@import "../../assets/scss/support";
 
 .index {
 	.index_btn {
@@ -70,5 +69,105 @@
 			}
 		}
 	}
+	.panel-title {
+		float: left;
+		display: block;
+		font-size: 14px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
+	.myVideo {
+		display: block;
+		margin: 0px auto 20px;
+	}
+	.gsdt {
+		width: 100%;
+		display: block;
+		padding-top: 10px;
+		border-top: 2px solid #ddd;
+	}
+	.news-ul {
+		text-align: left;
+		width: 100%;
+		.news_wrap {
+			padding:0 10px;
+			margin-bottom: 10px;
+			.news_img {
+				height: 50px;
+				width: 50px;
+				border-radius: 2px;
+				vertical-align: bottom;
+			}
+			.news_title {
+				margin-left: 5px;
+				display: inline-block;
+				font-size: 15px;
+				text-align: left;
+				vertical-align: top;
+				line-height: 15px;
+			}
+		}
+	}
 
+
+	.demo-text-1{
+		position: relative;
+		align-items: center;
+		justify-content: center;
+		background-color: #1AAD19;
+		color: #FFFFFF;
+		font-size: 18px;
+	}
+	//.demo-text-1:before{
+	//	position: absolute;
+	//	top: 50%;
+	//	left: 50%;
+	//	transform: translate(-50%, -50%);
+	//}
+	.page-section-spacing{
+		margin-top: 30px;
+	}
+	.scroll-view_H{
+		white-space: nowrap;
+	}
+	.scroll-view-item{
+		height: 150px;
+	}
+	.scroll-view-item_H{
+		display: inline-block;
+		width: 100%;
+		height: 200px;
+	}
+
+
+	//.demo-text-2{
+	//	position: relative;
+	//	align-items: center;
+	//	justify-content: center;
+	//	background-color: #2782D7;
+	//	color: #FFFFFF;
+	//	font-size: 18px;
+	//}
+	//.demo-text-2:before{
+	//	content: 'B';
+	//	position: absolute;
+	//	top: 50%;
+	//	left: 50%;
+	//	transform: translate(-50%, -50%);
+	//}
+	//.demo-text-3{
+	//	position: relative;
+	//	align-items: center;
+	//	justify-content: center;
+	//	background-color: #F1F1F1;
+	//	color: #353535;
+	//	font-size: 18px;
+	//}
+	//.demo-text-3:before{
+	//	content: 'C';
+	//	position: absolute;
+	//	top: 50%;
+	//	left: 50%;
+	//	transform: translate(-50%, -50%);
+	//}
 }
