--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -36,11 +36,30 @@
 				<text>关于我们</text>
 			</view>
 		</view>
+		<text class="panel-title">视频介绍</text>
 
-		<button wx:for="{{menuArr}}" class="index_btn" data-link="{{item.link}}" plain="false" size="default"
-				wx:key="{{idx}}" bindtap="clickMenuBtn">
-			{{item.name}}
-		</button>
+		<video class="myVideo"
+			   src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"
+			   danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
+		<text class="panel-title gsdt">公司动态</text>
+
+		<ul class="news-ul">
+			<li wx:for="{{newsArr}}" wx:key="index">
+				<view class="news_wrap">
+					<image class="news_img" src="../../image/ckb/banner1.jpg"></image>
+					<text class="news_title">腾讯科技新书预售:"掘金"互联网+时代</text>
+				</view>
+			</li>
+		</ul>
+		<text class="panel-title gsdt">图片介绍</text>
+		<scroll-view class="scroll-view_H" scroll-x="true"  style="width: 100%">
+			<image wx:for="{{picArr}}" wx:key="index" class="scroll-view-item_H demo-text-1" src="{{item}}"></image>
+		</scroll-view>
+
+		<!--<button wx:for="{{menuArr}}" class="index_btn" data-link="{{item.link}}" plain="false" size="default"-->
+				<!--wx:key="{{idx}}" bindtap="clickMenuBtn">-->
+			<!--{{item.name}}-->
+		<!--</button>-->
 
 	</view>
 </view>
