--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -1,31 +1,7 @@
 <view class="app about_us">
+	<text class="gywm">关于我们</text>
+	<text class="zw">在这个小程序管理平台，你可以管理你的小程序的权限，查看数据报表，发布小程序等操作。
 
-	<view class="introduce">
-		<text class="introduce_title">我们是谁?</text>
-		<view class="panel-body">
-			<text class="introduce_content">想利用自身开发技能提供一些老板需要的软件相关服务的一群追求自由的人</text>
-		</view>
-
-	</view>
-	<view class="introduce">
-		<text class="introduce_title">我们要干嘛?</text>
-		<view class="panel-body">
-			<text class="introduce_content">做出满足你需求的软件,挣个机械键盘钱</text>
-		</view>
-	</view>
-	<view class="introduce">
-		<text class="introduce_title">为什么是寒江雪?</text>
-		<view class="panel-body">
-			<text class="introduce_content">我非常喜欢'孤舟蓑笠翁,独钓寒江雪'孕育出来的语境.时刻保持一种悠然自得,享受生活的情趣.
-				我钓鱼,和天气无关,和江雪无关,和鱼无关,只和我想不想钓有关(ps:其实我不会钓鱼).目前人们在急功近利的价值观引导下对科技的滥用导致了很矛盾的局面.
-			</text>
-		</view>
-	</view>
-	<view class="introduce">
-		<text class="introduce_title">我们能帮你做什么?</text>
-		<view class="panel-body">
-			<text class="introduce_content">网站建设,省钱,整理需求,开发小程序,技术咨询,软件报价.企业或个人网上宣传,推广,提高逼格......</text>
-		</view>
-	</view>
+		登录 https://mp.weixin.qq.com ，我们可以在菜单 “设置”-“开发设置” 看到小程序的 AppID 了 。</text>
 
 </view>
