--- a/src/pages/company-news/company-news.scss
+++ b/src/pages/company-news/company-news.scss
@@ -1,28 +1,36 @@
 // 支持文件
 @import "../../assets/scss/support";
 
-.your_problem {
-	padding: 10px;
-	.user-img {
-		width: 50px;
-		height: 50px;
-		border-radius: 50%;
-		margin-top: 20px;
+.company-news {
+
+	.gsdt {
 		display: block;
-		overflow: hidden;
+		text-align: center;
+		margin: 0 auto;
+		padding: 20px 0;
+		font-size: 28px;
+		line-height: 28px;
 	}
-	.section {
-		border: 1px solid $colorLink;
-		border-radius: 2px;
-		margin: 10px;
-		input, textarea {
-			padding: 5px;
-			border-radius: 4px;
+	// 新闻列表
+	.news-box {
+		margin-bottom: 10px;
+		padding: 0 30px;
+		display: flex;
+		align-items: center;
+		.news_img {
+			display: block;
+			width: 80px;
+			height: 80px;
+			margin-right: 5px;
+			margin-left: -15px;
 		}
-	}
-	.submitBtn {
-		margin: 10px;
-		color: $color;
-		border:1px solid $colorLink;
+		.news_wrap {
+			flex-shrink: 100;
+			margin-bottom: 37px;
+			.news_title {
+				font-size: 17px;
+			}
+		}
+
 	}
 }
