--- a/src/pages/company-news/company-news.wxml
+++ b/src/pages/company-news/company-news.wxml
@@ -1,19 +1,9 @@
-<view class="app your_problem">
-	<open-data type="userAvatarUrl" style="margin: 0 auto;text-align: center;margin: 10px auto;"
-			   class="user-img"></open-data>
-	<open-data type="userNickName" style="text-align: center;" lang="zh_CN"></open-data>
-	<view class="section u-ta-l">
-		<input maxlength="10" type="text" placeholder="请输入您的姓名"/>
+<view class="company-news">
+	<text class="gsdt">公司动态</text>
+	<view class="news-box" wx:for="{{newsArr}}" wx:key="index">
+		<image class="news_img" src="../../image/ckb/banner1.jpg"></image>
+		<view class="news_wrap">
+			<text class="news_title">腾讯科技新书预售:"掘金"互联网+时代</text>
+		</view>
 	</view>
-	<view class="section u-ta-l">
-		<input maxlength="11" type="number" placeholder="请输入您的手机号"/>
-	</view>
-	<view class="section u-ta-l">
-		<input maxlength="20" placeholder="请输入您的邮箱"/>
-	</view>
-	<view class="section u-ta-l">
-		<textarea bindblur="bindTextAreaBlur" auto-height placeholder="你想说的..."/>
-	</view>
-
-	<button class="submitBtn" type="primary" plain="false" size="default" bindtap="clickSubmitData">提交</button>
 </view>
