--- a/src/pages/example/example.scss
+++ b/src/pages/example/example.scss
@@ -1,14 +1,36 @@
 // 支持文件
 @import "../../assets/scss/support";
-.showExample{
-	width: 100%;
-	padding: 20px auto;
-	text-align: center;
-	.exampleImg{
+
+.company-news {
+
+	.gsdt {
 		display: block;
-		margin: 20px auto;
 		text-align: center;
-		width: auto;
-		height: 100%;
+		margin: 0 auto;
+		padding: 20px 0;
+		font-size: 28px;
+		line-height: 28px;
+	}
+	// 新闻列表
+	.news-box {
+		margin-bottom: 10px;
+		padding: 0 30px;
+		display: flex;
+		align-items: center;
+		.news_img {
+			display: block;
+			width: 80px;
+			height: 80px;
+			margin-right: 5px;
+			margin-left: -15px;
+		}
+		.news_wrap {
+			flex-shrink: 100;
+			margin-bottom: 37px;
+			.news_title {
+				font-size: 17px;
+			}
+		}
+
 	}
 }
