--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -55,7 +55,7 @@
 			height: 100%;
 			text-align: center;
 			margin: 0 auto;
-			padding-top: 12px;
+			padding-top: 18px;
 			image {
 				height: 42px;
 				width: 42px;
@@ -86,31 +86,31 @@
 		padding-top: 10px;
 		border-top: 2px solid #ddd;
 	}
-	.news-ul {
-		text-align: left;
-		width: 100%;
+
+	// 新闻列表
+	.news-box {
+		margin-bottom: 10px;
+		padding: 0 30px;
+		display: flex;
+		align-items: center;
+		.news_img {
+			display: block;
+			width: 80px;
+			height: 80px;
+			margin-right: 5px;
+			margin-left: -15px;
+		}
 		.news_wrap {
-			padding:0 10px;
-			margin-bottom: 10px;
-			.news_img {
-				height: 50px;
-				width: 50px;
-				border-radius: 2px;
-				vertical-align: bottom;
-			}
+			flex-shrink: 100;
+			margin-bottom: 37px;
 			.news_title {
-				margin-left: 5px;
-				display: inline-block;
-				font-size: 15px;
-				text-align: left;
-				vertical-align: top;
-				line-height: 15px;
+				font-size: 17px;
 			}
 		}
+
 	}
 
-
-	.demo-text-1{
+	.demo-text-1 {
 		position: relative;
 		align-items: center;
 		justify-content: center;
@@ -118,56 +118,18 @@
 		color: #FFFFFF;
 		font-size: 18px;
 	}
-	//.demo-text-1:before{
-	//	position: absolute;
-	//	top: 50%;
-	//	left: 50%;
-	//	transform: translate(-50%, -50%);
-	//}
-	.page-section-spacing{
+	.page-section-spacing {
 		margin-top: 30px;
 	}
-	.scroll-view_H{
+	.scroll-view_H {
 		white-space: nowrap;
 	}
-	.scroll-view-item{
+	.scroll-view-item {
 		height: 150px;
 	}
-	.scroll-view-item_H{
+	.scroll-view-item_H {
 		display: inline-block;
 		width: 100%;
 		height: 200px;
 	}
-
-
-	//.demo-text-2{
-	//	position: relative;
-	//	align-items: center;
-	//	justify-content: center;
-	//	background-color: #2782D7;
-	//	color: #FFFFFF;
-	//	font-size: 18px;
-	//}
-	//.demo-text-2:before{
-	//	content: 'B';
-	//	position: absolute;
-	//	top: 50%;
-	//	left: 50%;
-	//	transform: translate(-50%, -50%);
-	//}
-	//.demo-text-3{
-	//	position: relative;
-	//	align-items: center;
-	//	justify-content: center;
-	//	background-color: #F1F1F1;
-	//	color: #353535;
-	//	font-size: 18px;
-	//}
-	//.demo-text-3:before{
-	//	content: 'C';
-	//	position: absolute;
-	//	top: 50%;
-	//	left: 50%;
-	//	transform: translate(-50%, -50%);
-	//}
 }
