--- a/src/pages/phone/phone.wxml
+++ b/src/pages/phone/phone.wxml
@@ -1,10 +1,20 @@
-<view class="app index">
+<view class="app phone">
 	<view class="app__inner">
-		<text class="app__title">创客宝</text>
-
-		<button wx:for="{{menuArr}}" class="index_btn" data-link="{{item.link}}" plain="false"  size="default" wx:key="{{idx}}" bindtap="clickMenuBtn">
-			{{item.name}}
-		</button>
-
+		<image src="../../image/ckb/banner1.jpg" class="company_img"></image>
+		<view class="company_info">
+			<view class="row">
+				<text class="label">公司名称:</text>
+				<text class="detail">广东科技有限公司</text>
+			</view>
+			<view class="row">
+				<text class="label">联系人:</text>
+				<text class="detail">广东科技有限公司</text>
+			</view>
+			<view class="row" style="margin-bottom: 10px">
+				<text class="label">联系电话:</text>
+				<text class="detail">广东科技有限公司</text>
+			</view>
+			<button type="primary" size="primary">拨打电话</button>
+		</view>
 	</view>
 </view>
