--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -1,7 +1,54 @@
 <view class="app about_us">
 	<text class="gywm">关于我们</text>
-	<text class="zw">在这个小程序管理平台，你可以管理你的小程序的权限，查看数据报表，发布小程序等操作。
-
-		登录 https://mp.weixin.qq.com ，我们可以在菜单 “设置”-“开发设置” 看到小程序的 AppID 了 。</text>
+	<text class="zw">
+		【深圳市创客宝科技有限公司】
+		是一家专业从事移动互联网产品技术研发运营推广的新兴DT企业。公司成立以来，已与多家咨询公司、投资公司等达成战略合作关系，构建起集策划、研发、运营、培训于一体的商务运营支持体系，并形成包括软件支持、商务合作、渠道开发、企业团队培训的全方位移动互联网商业服务架构。是专业的智慧零售服务商。
+		旗下创客宝平台，是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。平台使命：让零售更智慧。
+		企业倡导：
+		践行互联网+大众创业
+		定位：
+		一站式分享创业云平台
+		愿景：
+		成为行业领先、社会尊重、员工自豪的移动互联网企业
+		使命（口号）：
+		让零售更智慧!
+		企业目标：
+		为用户创造卓越的智慧购物体验
+		为商家提供优质的创业平台和智慧创新服务
+		为员工创造最佳的发展机会和最好的生活源泉
+		为国家为社会承担更多的责任
+		为企业创造更多的利益回报
+		价值理念
+		发展理念：没有句号，只有逗号
+		价值导向：以创客用户最佳体验为导向
+		企业宗旨：分享、共享、利他
+		核心价值观：
+		团结奋进
+		坚持合作分享、培养专注奋进的独立意识
+		乐观创造
+		历练健全人格，尊重个性发展，发掘员工潜能
+		用户至上
+		用户需求为导向，提供优质的产品体验和服务
+		分享共创
+		始终与合作伙伴、员工共创事业，共享成果
+		诚实守信
+		诚信正直的处事原则，遵守契约，忠诚服务客户
+		心怀感恩
+		积极的人生观，在工作中常怀感激之心
+		公司地址：深圳市宝安区智汇创新中心D栋3A02
+	</text>
+	<text class="gywm">【关于创客宝-智慧新零售】</text>
+	<text class="zw">
+		创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。
+		在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。
+		1、创客：
+		免费成为创客宝认证创客后，
+		（1）直接在平台购物，确认收货后获得平台购物补贴（消费省钱）；
+		（2）分享给他人下单并确认收货后，你将获得平台补贴（分享赚钱）；
+		（3）通过分享推广二维码产生的创客团队下单并确认收货后，你将获得平台补贴（分享赚钱）；
+		（4）补贴和创豆都是由系统自动发放到创客账户，创豆可用于购物抵扣，赚取的补贴可直接提现。
+		2、智慧云铺商家
+		全国各区县线下实体店商家均可加盟创客宝智慧云铺，从此开店不受时间、空间限制，通过创客宝进行精准营销、跨界收益。       3.创客宝线下多码付解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。
+	</text>
 
 </view>
