--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -38,7 +38,7 @@
 		公司地址：深圳市宝安区智汇创新中心D栋3A02
 	</text>
 	<text class="gywm">【关于创客宝-智慧新零售】</text>
-	<text class="zw">
+	<text class="zw" style="margin-bottom: 20px">
 		创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。
 		在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。
 		1、创客：
