--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -72,6 +72,7 @@
 	.panel-title {
 		float: left;
 		display: block;
+		width: 100%;
 		font-size: 14px;
 		margin-left: 10px;
 		margin-bottom: 20px;
@@ -79,6 +80,7 @@
 	.myVideo {
 		display: block;
 		margin: 0px auto 20px;
+		width: 90%;
 	}
 	.gsdt {
 		width: 100%;
