--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -48,7 +48,7 @@
 		<text class="panel-title">视频介绍</text>
 
 		<video class="myVideo"
-			   src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"
+			   src="https://ckb.mobi/media/videos/website/ckb01.mp4"
 			   danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
 		<text class="panel-title gsdt">公司动态</text>
 
