--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -13,7 +13,6 @@
 			</swiper>
 			<view class="dots">
 				<block wx:for="{{banners}}" wx:key="unique">
-
 					<view class="dot{{index == swiperCurrent ? ' active' : ''}}"></view>
 				</block>
 			</view>
@@ -52,17 +51,16 @@
 			   danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
 		<text class="panel-title gsdt">公司动态</text>
 
-
-		<view class="news-box" wx:for="{{newsArr}}" wx:key="index">
-			<image class="news_img" src="../../image/ckb/banner1.jpg"></image>
+		<view class="news-box" wx:for="{{newsArr}}" wx:key="index" data-id="{{item.id}}" bindtap="goHref">
+			<image class="news_img" src="{{item.logo}}"></image>
 			<view class="news_wrap">
-				<text class="news_title">腾讯科技新书预售:"掘金"互联网+时代</text>
+				<text class="news_title">{{item.title}}</text>
 			</view>
 		</view>
 
 		<text class="panel-title gsdt">图片介绍</text>
 		<scroll-view class="scroll-view_H" scroll-x="true" style="width: 100%">
-			<image wx:for="{{picArr}}" wx:key="index" class="scroll-view-item_H demo-text-1" src="{{item}}"></image>
+			<image style="margin-left: 5px" wx:for="{{picArr}}" wx:key="index" class="scroll-view-item_H demo-text-1" src="{{item}}"></image>
 		</scroll-view>
 
 	</view>
