--- a/src/pages/new-detail/new-detail.scss
+++ b/src/pages/new-detail/new-detail.scss
@@ -12,10 +12,10 @@
 			padding-bottom: 10px;
 			margin-bottom: 10px;
 		}
-		.news__detail {
-			font-size: 18px;
-			text-align: left;
-			float: left;
-		}
+	}
+	.news-image {
+		width: 100%;
+		min-height: 800px;
+		display: block;
 	}
 }
