--- a/src/pages/phone/phone.wxml
+++ b/src/pages/phone/phone.wxml
@@ -4,17 +4,17 @@
 		<view class="company_info">
 			<view class="row">
 				<text class="label">公司名称:</text>
-				<text class="detail">广东科技有限公司</text>
+				<text class="detail">{{companyName}}</text>
 			</view>
 			<view class="row">
 				<text class="label">联系人:</text>
-				<text class="detail">广东科技有限公司</text>
+				<text class="detail">{{userName}}</text>
 			</view>
 			<view class="row" style="margin-bottom: 10px">
 				<text class="label">联系电话:</text>
-				<text class="detail">广东科技有限公司</text>
+				<text class="detail">{{phone}}</text>
 			</view>
-			<button type="primary" size="primary">拨打电话</button>
+			<button type="primary" bindtap="call" size="primary">拨打电话</button>
 		</view>
 	</view>
 </view>
