--- a/src/pages/contact-us/contact-us.scss
+++ b/src/pages/contact-us/contact-us.scss
@@ -1,12 +1,32 @@
 // 支持文件
 @import "../../assets/scss/support";
 
-.contactUs {
-	.info_img {
-		text-align: center;
-		margin: 0 auto;
-		display: block;
-		width: 230px;
-		height: 230px;
+.phone {
+	.company_img {
+		width: 100%;
+		height: 200px;
 	}
+	.company_info {
+		padding: 5px;
+	}
+	.row {
+		width: 100%;
+		border-bottom: 2px solid #ddd;
+		float: left;
+		.label {
+			display: block;
+			width: 25%;
+			padding: 10px 0;
+			text-align: right;
+			float: left;
+		}
+		.detail {
+			float: left;
+			display: block;
+			width: 70%;
+			padding: 10px 0;
+			text-align: center;
+		}
+	}
+
 }
