--- a/src/pages/new-detail/new-detail.scss
+++ b/src/pages/new-detail/new-detail.scss
@@ -6,6 +6,8 @@
 	.news__inner {
 		.news__title {
 			font-size: 24px;
+			display: block;
+			width: 100%;
 			text-align: left;
 			float: left;
 			border-bottom: 1px solid #ddd;
