--- a/src/pages/new-detail/new-detail.wxml
+++ b/src/pages/new-detail/new-detail.wxml
@@ -2,5 +2,5 @@
 	<view class="news__inner">
 		<text class="news__title">{{title}}</text>
 	</view>
-	<image class="news-image" src="{{newsImg}}"></image>
+	<image wx:for="{{newsImg}}" wx:key="{{$index}}" class="news-image" src="{{item}}"></image>
 </view>
