--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -52,7 +52,7 @@
 		3、创客宝线下多码付
 		解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。
 	</text>
-	<text class="gywm">创客宝平台主营业务功能如下</text>
+	<text class="gywm" style="color: red">创客宝平台主营业务功能如下</text>
 
 	<text class="last-modify">1.线上智慧云铺商城；</text>
 	<text class="last-modify">2.线下多码付收款申请（银行审核）；</text>
@@ -63,7 +63,8 @@
 	<text class="last-modify">7.线上资金直接到商家微信或支付宝，线下多码付资金由银行监管（交易无账期）；</text>
 	<text class="last-modify">8.消费者主动分享商家店铺即可获得商家打赏（智慧管理后台）；</text>
 	<text class="last-modify">9.免费开通手机扫码枪功能收款对账更快捷（智能对账¥收款）；</text>
-	<text class="last-modify" style="margin-bottom: 20px">10.商家免费使用广告及代金券投放（智能广告营销）；【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>
+	<text class="last-modify" style="margin-bottom: 20px">10.商家免费使用广告及代金券投放（智能广告营销）；</text>
+	<text class="last-modify" style="color: red" >【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>
 
 
 
