你是老板 你说的算

--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -66,6 +66,8 @@
 	<text class="last-modify" style="margin-bottom: 20px">10.商家免费使用广告及代金券投放（智能广告营销）；</text>
 	<text class="last-modify" style="color: red" >【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>
 
+	<image src="http://mczaiyun.top/ckb/121.png" class="company_img"></image>
+
 
 
 </view>
