--- a/src/pages/contact-us/contact-us.wxml
+++ b/src/pages/contact-us/contact-us.wxml
@@ -15,8 +15,8 @@
 				<text class="detail">{{phone}}</text>
 			</view>
 			<view class="row" style="margin-bottom: 10px">
-				<text class="label">邮箱:</text>
-				<text class="detail">{{email}}</text>
+				<text class="label">手机/微信:</text>
+				<text class="detail">13926578824</text>
 			</view>
 			<button type="primary" bindtap="call" size="primary">拨打电话</button>
 		</view>
