--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -1,72 +1,49 @@
 <view class="app about_us">
 	<text class="gywm">关于我们</text>
 	<text class="zw">
-		【深圳市创客宝科技有限公司】
-		是一家专业从事移动互联网产品技术研发运营推广的新兴DT企业。公司成立以来，已与多家咨询公司、投资公司等达成战略合作关系，构建起集策划、研发、运营、培训于一体的商务运营支持体系，并形成包括软件支持、商务合作、渠道开发、企业团队培训的全方位移动互联网商业服务架构。是专业的智慧零售服务商。
-		旗下创客宝平台，是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。平台使命：让零售更智慧。
-		企业倡导：
-		践行互联网+大众创业
-		定位：
-		一站式分享创业云平台
-		愿景：
-		成为行业领先、社会尊重、员工自豪的移动互联网企业
-		使命（口号）：
-		让零售更智慧!
-		企业目标：
-		为用户创造卓越的智慧购物体验
-		为商家提供优质的创业平台和智慧创新服务
-		为员工创造最佳的发展机会和最好的生活源泉
-		为国家为社会承担更多的责任
-		为企业创造更多的利益回报
-		价值理念
-		发展理念：没有句号，只有逗号
-		价值导向：以创客用户最佳体验为导向
-		企业宗旨：分享、共享、利他
-		核心价值观：
-		团结奋进
-		坚持合作分享、培养专注奋进的独立意识
-		乐观创造
-		历练健全人格，尊重个性发展，发掘员工潜能
-		用户至上
-		用户需求为导向，提供优质的产品体验和服务
-		分享共创
-		始终与合作伙伴、员工共创事业，共享成果
-		诚实守信
-		诚信正直的处事原则，遵守契约，忠诚服务客户
-		心怀感恩
-		积极的人生观，在工作中常怀感激之心
-		公司地址：深圳市宝安区智汇创新中心D栋3A02
-	</text>
-	<text class="gywm">【关于创客宝-智慧新零售】</text>
-	<text class="zw" >
-		创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。
-		在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。
-		1、创客：
-		免费成为创客宝认证创客后，
-		（1）直接在平台购物，确认收货后获得平台购物补贴（消费省钱）；
-		（2）分享给他人下单并确认收货后，你将获得平台补贴（分享赚钱）；
-		（3）通过分享推广二维码产生的创客团队下单并确认收货后，你将获得平台补贴（分享赚钱）；
-		（4）补贴和创豆都是由系统自动发放到创客账户，创豆可用于购物抵扣，赚取的补贴可直接提现。
-		2、智慧云铺商家
-		全国各区县线下实体店商家均可加盟创客宝智慧云铺，从此开店不受时间、空间限制，通过创客宝进行精准营销、跨界收益。
-		3、创客宝线下多码付
-		解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。
-	</text>
-	<text class="gywm" style="color: red">创客宝平台主营业务功能如下</text>
+		【深圳市天美汇餐饮管理有限公司】
+		天美汇鸡翅包饭包括鸡翅包饭、奶茶、果饮等时尚休闲饮料，不断加强品牌的打造与升级，提高产品品质和服务质量，并不断挖掘新项目，经过多年努力，现已在深圳及广州各大商业旺区拥有三十多家连锁专卖店，凭借着精准的市场定位及技术不断更新，在餐饮领域迅速崛起。天美汇鸡翅包饭遵循“组织系统化，决策科学化，管理规范化，效率标准化”的经营方针，我们坚信：坚持以市场为导向，以创新为动力，以质量求生存，以发展求壮大，天美汇一定会赢得更美好的明天!
 
-	<text class="last-modify">1.线上智慧云铺商城；</text>
-	<text class="last-modify">2.线下多码付收款申请（银行审核）；</text>
-	<text class="last-modify">3.费率最低（支持信用卡、微信、支付宝、蚂蚁花呗、京东白条、储值卡等支付工具）；</text>
-	<text class="last-modify">4.消费者扫码付款即可成为商家会员（新人领取随机红包一个）；</text>
-	<text class="last-modify">5.免费会员精准推送（平台己开通蜂鸟、达达配送）；</text>
-	<text class="last-modify">6.定期活动奖励商家（消费者买单领取随机红包打折）；</text>
-	<text class="last-modify">7.线上资金直接到商家微信或支付宝，线下多码付资金由银行监管（交易无账期）；</text>
-	<text class="last-modify">8.消费者主动分享商家店铺即可获得商家打赏（智慧管理后台）；</text>
-	<text class="last-modify">9.免费开通手机扫码枪功能收款对账更快捷（智能对账¥收款）；</text>
-	<text class="last-modify" style="margin-bottom: 20px">10.商家免费使用广告及代金券投放（智能广告营销）；</text>
-	<text class="last-modify" style="color: red" >【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>
+		天美汇鸡翅包饭加盟，诸多休闲美食，诸多休闲体验，给您带去回味无穷的享受，给您带去意想不到的感受!天美汇鸡翅包饭餐饮系列产品的问世，将助天美汇鸡翅包饭成为低碳餐饮的领跑者。
 
-	<image src="http://mczaiyun.top/ckb/121.jpg" class="company_img"></image>
+		天美汇鸡翅包饭官网以快乐健康为主打产品，天美汇鸡翅包饭秉承“健康、时尚、休闲、营养、快捷”的经营理念和“时尚小吃、个性生活”的品牌宗旨，天美汇鸡翅包饭并凭借个性的定位和独特的口感迎取了广大消费者。天美汇鸡翅包饭包括鸡翅包饭、奶茶、果饮等时尚休闲饮料，不断加强品牌的打造与升级，提高产品品质和服务质量，并不断挖掘新项目，经过多年努力，现已在深圳及广州各大商业旺区拥有三十多家连锁专卖店，凭借着精准的市场定位及技术不断更新，在餐饮领域迅速崛起。天美汇鸡翅包饭遵循“组织系统化，决策科学化，管理规范化，效率标准化”的经营方针，我们坚信：坚持以市场为导向，以创新为动力，以质量求生存，以发展求壮大，天美汇一定会赢得更美好的明天!
+
+		天美汇鸡翅包饭加盟，诸多休闲美食，诸多休闲体验，给您带去回味无穷的享受，给您带去意想不到的感受!天美汇鸡翅包饭餐饮系列产品的问世，将助天美汇鸡翅包饭成为低碳餐饮的领跑者。
+
+		天美汇鸡翅包饭官网以快乐健康为主打产品，天美汇鸡翅包饭秉承“健康、时尚、休闲、营养、快捷”的经营理念和“时尚小吃、个性生活”的品牌宗旨，天美汇鸡翅包饭并凭借个性的定位和独特的口感迎取了广大消费者。
+		总部地址：深圳市罗湖区东门中路华佳广场15楼1502-1503室
+	</text>
+
+	<!--<text class="gywm">【关于创客宝-智慧新零售】</text>-->
+	<!--<text class="zw" >-->
+		<!--创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。-->
+		<!--在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。-->
+		<!--1、创客：-->
+		<!--免费成为创客宝认证创客后，-->
+		<!--（1）直接在平台购物，确认收货后获得平台购物补贴（消费省钱）；-->
+		<!--（2）分享给他人下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
+		<!--（3）通过分享推广二维码产生的创客团队下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
+		<!--（4）补贴和创豆都是由系统自动发放到创客账户，创豆可用于购物抵扣，赚取的补贴可直接提现。-->
+		<!--2、智慧云铺商家-->
+		<!--全国各区县线下实体店商家均可加盟创客宝智慧云铺，从此开店不受时间、空间限制，通过创客宝进行精准营销、跨界收益。-->
+		<!--3、创客宝线下多码付-->
+		<!--解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。-->
+	<!--</text>-->
+	<!--<text class="gywm" style="color: red">创客宝平台主营业务功能如下</text>-->
+
+	<!--<text class="last-modify">1.线上智慧云铺商城；</text>-->
+	<!--<text class="last-modify">2.线下多码付收款申请（银行审核）；</text>-->
+	<!--<text class="last-modify">3.费率最低（支持信用卡、微信、支付宝、蚂蚁花呗、京东白条、储值卡等支付工具）；</text>-->
+	<!--<text class="last-modify">4.消费者扫码付款即可成为商家会员（新人领取随机红包一个）；</text>-->
+	<!--<text class="last-modify">5.免费会员精准推送（平台己开通蜂鸟、达达配送）；</text>-->
+	<!--<text class="last-modify">6.定期活动奖励商家（消费者买单领取随机红包打折）；</text>-->
+	<!--<text class="last-modify">7.线上资金直接到商家微信或支付宝，线下多码付资金由银行监管（交易无账期）；</text>-->
+	<!--<text class="last-modify">8.消费者主动分享商家店铺即可获得商家打赏（智慧管理后台）；</text>-->
+	<!--<text class="last-modify">9.免费开通手机扫码枪功能收款对账更快捷（智能对账¥收款）；</text>-->
+	<!--<text class="last-modify" style="margin-bottom: 20px">10.商家免费使用广告及代金券投放（智能广告营销）；</text>-->
+	<!--<text class="last-modify" style="color: red" >【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>-->
+
+	<!--<image src="http://mczaiyun.top/ckb/121.jpg" class="company_img"></image>-->
 
 
 
