--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -2,6 +2,11 @@
 	<text class="gywm">关于我们</text>
 	<text class="zw">
 		【深圳市天美汇餐饮管理有限公司】
+
+		天美汇成立于2006年,总部位于深圳市,是一个集食品研发,生产加工,包装配送,产品销售为一体的连锁企业.
+
+		天美汇鸡翅包饭是天美汇餐饮下子品牌之一,创立于2015年初,经过三年多的不断发展和沉淀,天美汇鸡翅包饭已在全国各个省市开设多家门店,公司坚持从源头制作到门店销售的每一个细节都严格把关,坚持给顾客带来非凡的味觉体验和服务体验,公司始终相信,匠心出美味,真诚遇顾客.
+
 		天美汇鸡翅包饭包括鸡翅包饭、奶茶、果饮等时尚休闲饮料，不断加强品牌的打造与升级，提高产品品质和服务质量，并不断挖掘新项目，经过多年努力，现已在深圳及广州各大商业旺区拥有三十多家连锁专卖店，凭借着精准的市场定位及技术不断更新，在餐饮领域迅速崛起。天美汇鸡翅包饭遵循“组织系统化，决策科学化，管理规范化，效率标准化”的经营方针，我们坚信：坚持以市场为导向，以创新为动力，以质量求生存，以发展求壮大，天美汇一定会赢得更美好的明天!
 
 		天美汇鸡翅包饭加盟，诸多休闲美食，诸多休闲体验，给您带去回味无穷的享受，给您带去意想不到的感受!天美汇鸡翅包饭餐饮系列产品的问世，将助天美汇鸡翅包饭成为低碳餐饮的领跑者。
@@ -16,18 +21,18 @@
 
 	<!--<text class="gywm">【关于创客宝-智慧新零售】</text>-->
 	<!--<text class="zw" >-->
-		<!--创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。-->
-		<!--在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。-->
-		<!--1、创客：-->
-		<!--免费成为创客宝认证创客后，-->
-		<!--（1）直接在平台购物，确认收货后获得平台购物补贴（消费省钱）；-->
-		<!--（2）分享给他人下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
-		<!--（3）通过分享推广二维码产生的创客团队下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
-		<!--（4）补贴和创豆都是由系统自动发放到创客账户，创豆可用于购物抵扣，赚取的补贴可直接提现。-->
-		<!--2、智慧云铺商家-->
-		<!--全国各区县线下实体店商家均可加盟创客宝智慧云铺，从此开店不受时间、空间限制，通过创客宝进行精准营销、跨界收益。-->
-		<!--3、创客宝线下多码付-->
-		<!--解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。-->
+	<!--创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。-->
+	<!--在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。-->
+	<!--1、创客：-->
+	<!--免费成为创客宝认证创客后，-->
+	<!--（1）直接在平台购物，确认收货后获得平台购物补贴（消费省钱）；-->
+	<!--（2）分享给他人下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
+	<!--（3）通过分享推广二维码产生的创客团队下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
+	<!--（4）补贴和创豆都是由系统自动发放到创客账户，创豆可用于购物抵扣，赚取的补贴可直接提现。-->
+	<!--2、智慧云铺商家-->
+	<!--全国各区县线下实体店商家均可加盟创客宝智慧云铺，从此开店不受时间、空间限制，通过创客宝进行精准营销、跨界收益。-->
+	<!--3、创客宝线下多码付-->
+	<!--解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。-->
 	<!--</text>-->
 	<!--<text class="gywm" style="color: red">创客宝平台主营业务功能如下</text>-->
 
@@ -44,7 +49,6 @@
 	<!--<text class="last-modify" style="color: red" >【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>-->
 
 	<!--<image src="http://mczaiyun.top/ckb/121.jpg" class="company_img"></image>-->
-
 
 
 </view>
