--- a/src/pages/example/example.scss
+++ b/src/pages/example/example.scss
@@ -2,6 +2,10 @@
 @import "../../assets/scss/support";
 
 .company-news {
+	.example_img{
+		width: 100%;
+		height: 180px;
+	}
 
 	.gsdt {
 		display: block;
