--- a/src/pages/example/example.wxml
+++ b/src/pages/example/example.wxml
@@ -1,9 +1,15 @@
 <view class="company-news">
 	<text class="gsdt">成功案例</text>
-	<view class="news-box" wx:for="{{exampleList}}" data-id="{{item.id}}" bindtap="goHref" wx:key="index">
-		<image class="news_img" src="{{item.logo}}"></image>
-		<view class="news_wrap">
-			<text class="news_title">{{item.title}}</text>
-		</view>
+	<view>
+		<image class="example_img" src="../../image/tmh/4.jpg"></image>
+		<image class="example_img" src="../../image/tmh/8.jpg"></image>
+		<image class="example_img" src="../../image/tmh/6.jpg"></image>
+		<image class="example_img" src="../../image/tmh/7.jpg"></image>
 	</view>
+	<!--<view class="news-box" wx:for="{{exampleList}}" data-id="{{item.id}}" bindtap="goHref" wx:key="index">-->
+	<!--<image class="news_img" src="{{item.logo}}"></image>-->
+	<!--<view class="news_wrap">-->
+	<!--<text class="news_title">{{item.title}}</text>-->
+	<!--</view>-->
+	<!--</view>-->
 </view>
